--- a/css/style.css
+++ b/css/style.css
@@ -421,3 +421,394 @@ article {
   }
 
   /* ===========FOOTER =>>  footer.css ================ */
+  /* ===========Evans's Header =>>  style.css ================ */
+  /* ===GENERAL=== */
+@import url("https://fonts.googleapis.com/css?family=Inconsolata:700");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot#iefix&v=4.7.0")
+      format("embedded-opentype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0")
+      format("woff2"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0")
+      format("woff"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0")
+      format("truetype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* ===HEADER=== */
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+header {
+  background: url(/assets/images/dog.jpeg);
+  background-size: cover;
+  width: 100%;
+  box-shadow: inset 0px 0px 145px 6px rgba(0, 0, 0, 0.85);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header-container {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+}
+.header-top {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.toggle {
+  width: 50%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 30px;
+}
+
+.toggle:hover{
+  background-color:#243e86;
+}
+
+
+.toggle ul li:hover {
+  color:white;
+  background: #ffcd03;
+}
+
+.toggle label {
+  display: none;
+ 
+}
+.toggle ul li {
+  display: inline-block;
+
+  color: white;
+  padding: 20px;
+}
+.toggle ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  width: 40%;
+  margin-top: 30px;
+}
+
+.float-right {
+  float: right;
+}
+
+.donate-btn {
+  display: inline-block;
+  margin-right: 100px;
+}
+
+.donate-link {
+  color: white;
+  background-color: red;
+  font-size: 28px;
+  padding: 10px 60px 10px 60px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.search-container {
+  /* position: absolute; */
+  transform: translate(-50%);
+  right: 0;
+  display: inline-block;
+  float: right;
+}
+.search-box input {
+  border: none;
+  background: none;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  transition: all 0.25s ease-in 0.25s;
+  color: transparent;
+  font-size: 1em;
+  line-height: 25px;
+}
+
+.search-box input:hover {
+  cursor: pointer;
+}
+
+.search-box input:hover:focus {
+  cursor: text;
+}
+
+.search-box input:hover + span {
+  background: rgba(255, 255, 255, 2);
+}
+
+.search-box input:focus {
+  width: 200px;
+  padding: 0 10px;
+  outline: none;
+  color: black;
+  background: none;
+  color: red;
+}
+
+.search-box input:focus + span {
+  width: 200px;
+}
+
+.search-box input:focus + span::before {
+  width: 2px;
+  opacity: 0;
+  transition: all 0.25s ease-in;
+}
+
+.search-box input + span {
+  z-index: -1;
+  position: absolute;
+  border: 2px solid #fff;
+  top: 0;
+  width: 25px;
+  height: 25px;
+  transition: all 0.25s ease-in 0.25s;
+  border-radius: 25px;
+  left: 0;
+}
+
+.search-box input + span::before {
+  transition: all 0.25s ease-in 0.25s;
+  transform-origin: left top;
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 5px;
+  border-radius: 5px;
+  background: #fff;
+  transform: rotate(45deg) translate(26px, -2px);
+}
+
+.bottom-container {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.header-title {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.bottom-title {
+  font-size: 90px;
+  color: white;
+}
+
+.bg-box-right {
+  width: 50%;
+
+  /*   background-color: black; */
+  z-index: 3;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.text-box {
+  text-align: center;
+  width: 60%;
+  margin: 60px auto;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.text-box-content {
+  font-size: 60px;
+  color: #243e86;
+}
+
+.video-container {
+  margin: auto;
+
+  width: 80vw;
+  height: 46vw;
+}
+
+.video-container iframe {
+  /* margin-left: 40%; */
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.link-wrapper {
+  float: right;
+}
+
+.bg-bottom {
+  background: black;
+  padding-bottom: 5rem;
+  padding-top: 1rem;
+
+  padding-left: 1.5rem;
+  position: relative;
+  z-index: -1;
+}
+.bg-bottom :hover {
+  color: #ffcd03;
+}
+
+.bg-bottom::after {
+  content: " ";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  margin: 0px 0px 0px 10px;
+  text-decoration: none;
+  height: 0;
+  border-bottom: 80px solid#0492C0;
+  border-left: 100px solid transparent;
+  position: absolute;
+  right: 0;
+}
+
+.bg-wrapper {
+  color: #ffffff;
+}
+.fa-arrow-right {
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  float: center;
+  margin-top: 50px;
+  margin-right: 30px;
+  color: black;
+}
+
+.bg-big {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  /*  -webkit-transition: color,0.2s;
+    -moz-transition: color,0.2s; */
+  transition: color, 0.2s;
+  color: #009ed0;
+  font-size: 1rem;
+  letter-spacing: 0.125rem;
+  margin-bottom: 0.1875rem;
+  padding-top: 1.25rem;
+  text-transform: uppercase;
+}
+
+.bg-banning {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  color: #ffffff;
+  display: inline;
+  font-size: 1.6875rem;
+  margin: 0.2rem 0;
+  text-align: left;
+}
+
+.bg-save {
+  font-family: "freight-text-pro", serif;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 1.0625rem;
+  line-height: 1.3;
+  margin-bottom: 1.25rem;
+  margin-top: 0.375rem;
+  color: white;
+}
+
+.bottom-container .bg-bottom {
+  background: #171d29;
+  float: right;
+  justify-content: space-between;
+  margin-right: auto;
+}
+/* ===MAIN=== */
+
+/* ===FOOTER=== */
+
+/* MEDIA QUERY */
+@media screen and (max-width: 1400px) {
+  .bottom-title {
+    font-size: 70px;
+  }
+
+  .header-title {
+    margin-bottom: 70px;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .bottom-title {
+    font-size: 60px;
+  }
+
+  .header-title {
+    margin-bottom: 60px;
+  }
+
+  .video-container {
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header-top,
+  header li {
+  }
+  .toggle label {
+    display: block;
+  }
+  .toggle ul {
+    display: none;
+  }
+  .toggle:hover ul {
+    display: block;
+  }
+
+  .toggle {
+    font-size: 55px;
+  }
+
+  .toggle ul li {
+    font-size: 20px;
+  }
+}
+
+
+
+
+
+/* For evans's header */
