--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* ===GENERAL=== */
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:700");
+
 * {
   margin: 0;
   padding: 0;
@@ -23,16 +24,11 @@ body {
 @font-face {
   font-family: "FontAwesome";
   src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
-  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot#iefix&v=4.7.0")
-      format("embedded-opentype"),
-    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0")
-      format("woff2"),
-    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0")
-      format("woff"),
-    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0")
-      format("truetype"),
-    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular")
-      format("svg");
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot#iefix&v=4.7.0") format("embedded-opentype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -59,6 +55,7 @@ header {
   justify-content: space-between;
   flex: 1;
 }
+
 .header-top {
   display: flex;
   flex-wrap: wrap;
@@ -84,12 +81,14 @@ header {
 .toggle label {
   display: none;
 }
+
 .toggle ul li {
   display: inline-block;
 
   color: white;
   padding: 20px;
 }
+
 .toggle ul li a {
   text-decoration: none;
   color: white;
@@ -104,11 +103,13 @@ header {
 
 .float-right {
   float: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
 }
 
 .donate-btn {
-  display: inline-block;
-  margin-right: 100px;
+  flex: 80%;
 }
 
 .donate-link {
@@ -120,77 +121,140 @@ header {
   border-radius: 5px;
 }
 
-.search-container {
-  /* position: absolute; */
-  transform: translate(-50%);
-  right: 0;
-  display: inline-block;
-}
-.search-box input {
-  border: none;
-  background: none;
-  z-index: 1;
-  width: 25px;
-  height: 25px;
-  transition: all 0.25s ease-in 0.25s;
-  color: transparent;
-  font-size: 1em;
-  line-height: 25px;
+/* SEARCH MODAL ==================== */
+
+.modal-container {
+  flex: 20%;
+  position: relative;
+  width: 100%;
+  color: white;
 }
 
-.search-box input:hover {
+.modal-container button {
+  display: block;
+  margin: 0 auto;
+  color: white;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  background: none;
+  font-size: 25px;
+  border: 0;
+}
+
+.modal-container .modal-backdrop {
+  height: 0;
+  width: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: opacity 0.2s ease-in;
+}
+
+.modal-container #modal-toggle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  opacity: 0;
   cursor: pointer;
 }
 
-.search-box input:hover:focus {
-  cursor: text;
-}
-
-.search-box input:hover + span {
-  background: rgba(255, 255, 255, 2);
-}
-
-.search-box input:focus {
-  width: 200px;
-  padding: 0 10px;
-  outline: none;
-  color: black;
-  background: none;
-  color: red;
-}
-
-.search-box input:focus + span {
-  width: 200px;
-}
-
-.search-box input:focus + span::before {
-  width: 2px;
-  opacity: 0;
-  transition: all 0.25s ease-in;
-}
-
-.search-box input + span {
-  z-index: -1;
-  position: absolute;
-  border: 2px solid #fff;
-  top: 0;
-  width: 25px;
-  height: 25px;
-  transition: all 0.25s ease-in 0.25s;
-  border-radius: 25px;
+.modal-container #modal-toggle:checked {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
   left: 0;
+  top: 0;
+  z-index: 9;
+  opacity: 0;
 }
 
-.search-box input + span::before {
-  transition: all 0.25s ease-in 0.25s;
-  transform-origin: left top;
-  content: "";
+.modal-container #modal-toggle:checked~.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9;
+  pointer-events: none;
+  opacity: 1;
+}
+
+.modal-container #modal-toggle:checked~.modal-backdrop .modal-content {
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px 30px;
   position: absolute;
-  width: 10px;
-  height: 5px;
-  border-radius: 5px;
-  background: #fff;
-  transform: rotate(45deg) translate(26px, -2px);
+  left: 10%;
+  top: 20%;
+  border-radius: 4px;
+  z-index: 999;
+  pointer-events: auto;
+  cursor: auto;
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.6);
+}
+
+.modal-close {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+
+.modal-content .close {
+  padding-top: 30px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.modal-content .modal-title-h4 {
+  display: inline-block;
+}
+
+.modal-title {
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+.form-inline {
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.form-inline .form-group {
+  flex: 80%;
+}
+
+.form-inline .search-btn {
+  flex: 20%;
+}
+
+.form-inline .btn-danger {
+  width: 100%;
+  background-color: #009ed0;
+  padding: 23.5px;
+  font-size: 20px;
+  border: none;
+  color: white;
+  font-weight: 700;
+}
+
+.form-inline .form-control {
+  margin: 0;
+  padding: 20px 10px;
+  font-size: 22px;
+  width: 100%;
 }
 
 .bottom-container {
@@ -235,14 +299,17 @@ header {
   font-weight: 400;
 }
 
-.video-responsive{
-  overflow:hidden;
-  position:relative;
+/* VIDEO =========================== */
+
+.video-responsive {
+  overflow: hidden;
+  position: relative;
   min-height: 500px;
   width: 86%;
   margin: auto;
 }
-.video-responsive iframe{
+
+.video-responsive iframe {
   left: 0;
   top: 0;
   height: 100%;
@@ -263,6 +330,7 @@ header {
   position: relative;
   z-index: -1;
 }
+
 .bg-bottom :hover {
   color: #ffcd03;
 }
@@ -284,6 +352,7 @@ header {
 .bg-wrapper {
   color: #ffffff;
 }
+
 .bg-wrapper .fa-arrow-right {
   position: absolute;
   right: 0;
@@ -762,7 +831,7 @@ article {
 }
 
 .news__body {
-  font-family: "freight-text-pro",serif;
+  font-family: "freight-text-pro", serif;
   font-size: 28px;
   font-weight: 700;
   line-height: 24px;
@@ -929,9 +998,11 @@ article {
   .toggle label {
     display: block;
   }
+
   .toggle ul {
     display: none;
   }
+
   .toggle:hover ul {
     display: block;
   }
